<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="15dp"
              android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/demo_tips"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        >

        <EditText
            android:id="@+id/sender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_sender"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        >

        <EditText
            android:id="@+id/receiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_receiver"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sign_in_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_in"
        android:textStyle="bold"/>

</LinearLayout>
