<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_current_user_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_red_packet_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"/>

        <include
            android:id="@+id/layout_red_packet_send"
            layout="@layout/im_row_sent_red_packet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

        <include
            android:id="@+id/layout_red_packet_receive"
            layout="@layout/im_row_received_red_packet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

        <include
            android:id="@+id/layout_transfer_send"
            layout="@layout/im_row_sent_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

        <include
            android:id="@+id/layout_transfer_receive"
            layout="@layout/im_row_received_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

    </LinearLayout>


    <Button
        android:id="@+id/btn_swap_user"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:enabled="true"
        android:text="@string/swap_user"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_single"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_enter_single_red_packet"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/enter_single_red_packet"/>

            <Button
                android:id="@+id/btn_enter_transfer_packet"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/enter_transfer"/>

            <Button
                android:id="@+id/btn_enter_random_packet"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/enter_random_red_packet"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:visibility="gone">


            <Button
                android:id="@+id/btn_enter_change"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/enter_change"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_group"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_enter_group_red_packet"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/enter_group_red_packet"/>

            <Button
                android:id="@+id/btn_enter_group_p2p_red_packet"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/enter_group_p2p_red_packet"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
